feat: adding administrative tasks

--- a/report_template.html
+++ b/report_template.html
@@ -93,6 +93,9 @@
      <h2> Estadística por Usuario</h2>
     USER_TABLES
 
+        <h2> Todas las publicaciones completadas </h2>
+        POST_TABLES
+
     <script>
         <!-- print mode -->
         window.print();
